# Surface-Filling-Curve

./: .gitignore  CHANGELOG.md  CMakeLists.txt  PLUGIN.md  README.md  build_plugin.bat  build_plugin.sh  package.json
.github/workflows/: build.yml
Plugins/macOS/: libsurface_filling_curve.dylib
Runtime/: SurfaceFillingCurveRenderer.cs
src/: curve.cpp  curve.h  curve_ffi.cpp  curve_ffi.h  parallel.cpp  parallel.h  stitcher.cpp  stitcher.h  stripe.cpp  stripe.h  subdivide.cpp  subdivide.h
unity/com.iota97.surface-filling-curve/: .gitignore  README.md  package.json
unity/com.iota97.surface-filling-curve/Plugins/macOS/: libsurface_filling_curve.dylib
unity/com.iota97.surface-filling-curve/Runtime/: SurfaceFillingCurve.Runtime.asmdef  SurfaceFillingCurve.cs
